[B]3.7.13[/B]
- fixed: movie certification won't scrape

[B]3.7.12[/B]
- cache api response when using imdb based lookups

[B]3.7.11[/B]
- updated language files from Transifex

[B]3.7.10[/B]
- updated language files from Transifex

[B]3.7.9[/B]
- updated language files from Transifex

[B]3.7.8[/B]
- updated language files from Transifex

[B]3.7.7[/B]
- updated language files from Transifex

[B]3.7.6[/B]
- fixed: potential false match in NfoUrl (thanks and credits to ScHAmPi)

[B]3.7.5[/B]
- updated: TMDb API URLs

[B]3.7.3[/B]
- updated language files from Transifex

[B]3.7.2[/B]
- updated language files from Transifex

[B]3.7.1[/B]
- updated language files from Transifex

[B]3.7.0[/B]
- updated: out factored studio and country scraping to common library

[B]3.6.1[/B]
- updated: Scraper name

[B]3.6.0[/B]
- updated: out factored tagline scraping to common library

[B]3.5.0[/B]
- added: aspect tag and reorder languages according to the alphabet

[B]3.4.1[/B]
- updated chinese translation

[B]3.4.0[/B]
- added: prefer trailer language according to the selected language

[B]3.3.0[/B]
- updated: improve CreateSearchUrl according to TMDb API changes

[B]3.2.0[/B]
- fixed: keep Originaltitle
- fixed: &'s needs double escaping
- added: option to scrape certification from selected country

[B]3.1.0[/B]
- updated: factored out title scraping to common library

[B]3.0.9[/B]
- fixed: missing language parameter name in NfoUrl

[B]3.0.8[/B]
- fixed: movies without release date won't find

[B]3.0.7[/B]
- fixed: keep originaltitle; IMDb ID; remove TMDb title fallback, because it became obsolate

[B]3.0.6[/B]
- updated chinese translation

[B]3.0.5[/B]
- reverted latest change

[B]3.0.4[/B]
- added: option to not scrape sets

[B]3.0.3[/B]
- fixed: plot outline includes trash on some movies

[B]3.0.2[/B]
- fixed: imdb IDs not properly handled

[B]3.0.1[/B]
- changed: also fallback to original_title to make sure a valid title gets scraped

[B]3.0.0[/B]