@@ -1,3 +1,7 @@
+[B]3.8.0[/B]
+- added extra languages for selection
+- changed language to a selection list
+
 [B]3.7.13[/B]
 - fixed: movie certification won't scrape
 
